# vtr-verilog-to-routing

./: .clang-format  .clang-tidy  .codespellrc  .cproject  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .project  .readthedocs.yaml  .travis.yml  0_blink.abc.blif  0_blink.raw.abc.blif  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DISABLED.travis.yml  DOCKER_DEPLOY.md  Dockerfile  LICENSE.md  LICENSE.txt  Makefile  Makefile-cmake  Makefile-old  README  README.422  README.adoc  README.developers.md  README.md  README.release.txt  README.txt  README_430.txt  README_nightly_regression_parallelism.md  Readme.txt  (+74 more)
ODIN_II/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  README.txt  coverage_report.html  default_out.blif  exec_wrapper.sh  log.txt  main.cpp  odin.soft_config  odin_II  out.ok  parse_odin_stats.py  restore_blackboxed_latches_from_blif_file.py  run_yosys.sh  synth.tcl  temp.txt  test.sh  verify_full.sh  verify_microbenchmarks.sh  verify_odin.sh  verify_regression_tests.sh  wrapper_odin.sh
ODIN_II/DOCUMENTS/: ODIN_II_Config.xsd  What_synthesis_odin_doesnot_handle.txt  verilog_bnf_for_odinII_reduced.html
ODIN_II/FULL_REGRESSION_TESTS/: CRC33_D264_input  LU32PEEng_input  LU64PEEng_input  binops_output  blob_merge.v  cf_cordic_v_18_18_18.v  cf_cordic_v_18_18_18_input  cf_fft_256_8.v  cf_fir_24_16_16.v  cf_fir_3_8_8_input  ch_intrinsics_input  ch_intrinsics_output  diffeq1_input  diffeq2_output  fir_scu_rtl_restructured_for_cmm_exp.v  fir_scu_rtl_restructured_for_cmm_exp_input  iir1.v  iir1_input  iir1_output  iir_no_combinational.v  iir_no_combinational_output  mcml.v  mcml_input  mcml_output  memory_controller_output  mkPktMerge_input  mkPktMerge_output  oc54_cpu.v  oc54_cpu_input  or1200_input  or1200_output  paj_framebuftop_hierarchy_no_mem_no_combinational_input  paj_framebuftop_hierarchy_no_mem_no_combinational_output  stereovision0.v  stereovision0_input  stereovision1_input  stereovision1_output  stereovision2_input  stereovision3_input
ODIN_II/LIB/: adffe2dff.v
ODIN_II/QUICK_TEST/: README.txt  quick_test.bash  test.v
ODIN_II/REGRESSION_TESTS/: README.txt
ODIN_II/SANDBOX/: .gdbinit  README.txt  config_basic.xml  config_basic_arch.xml  default_out.blif  full_adder.blif  full_adder.v  graphs.bash  multiply_hard.xml  multiply_soft.xml  out.blif  second.blif  second.v  spram.v  spram_hard.xml  tech_lib_vpr.xml  test.v  top.v  valgrind.bash  valgrind_leak.bash
ODIN_II/SRC/: BLIF.cc  BLIF.cpp  BLIFElaborate.cc  BLIFElaborate.cpp  BLIFReader.cc  BLIFReader.cpp  BLIFWriter.cc  BLIFWriter.cpp  BitwiseOps.cpp  BlockMemories.cc  BlockMemories.cpp  CP.cpp  CaseEqual.cc  (+180 more)
abc/: .appveyor.yml  .gitattributes  .gitignore  .hgtags  .travis.yml  CMakeLists.txt  Makefile  README.md  abc  abc.rc  abcexe.dsp  abclib.dsp  abcspace.dsw  arch_flags  copyright.txt  depends.sh  readme.md
abc_with_bb_support/: CMakeLists.txt  Makefile  abc.dsp  abc.dsw  abc.rc  abc.vcproj  abclib.dsp  abclib.dsw  abcspace.dsw  abctestlib.dsp  accum.resyn2.blif  accum.v  copyright.txt  default_out (1).blif  default_out.blif  depends.sh  readme  readmeaig  regtest.script  regtest_output.txt  simple.blif  simple.v  todo.txt
ace2/: .gitignore  CMakeLists.txt  Makefile  ace  ace.c  ace.h  bdd.c  bdd.h  blif.c  blif.h  crc.act  cube.c  cube.h  cycle.c  cycle.h  depth.c  depth.h  io_ace.c  io_ace.h  sim.c  sim.h
blifexplorer/: CMakeLists.txt  README.md  README.txt  blifexplorer
doc/: .gitignore  CMakeLists.txt  Makefile  README  conf.py  contact.rst  doxyfile.in  index.rst  make.bat  requirements.txt  z_references.bib
libarchfpga/: CMakeLists.txt  Makefile  ReadLine.c  arch_error.c  arch_util.c  echo_arch.c  ezxml.c  libarchfpga.vcxproj  libarchfpga.vcxproj.filters  main.c  parse_switchblocks.c  physical_types.c  read_xml_arch_file.c  read_xml_util.c  util.c
libeasygl/: CMakeLists.txt  Makefile
liblog/: CMakeLists.txt  Makefile  liblog.vcxproj  liblog.vcxproj.filters  test_log
libpugixml/: CMakeLists.txt  Makefile
libs/: CMakeLists.txt  README.md
libsdc_parse/: CMakeLists.txt  Makefile  README.txt  libsdc_parse.vcxproj
libtatum/: CMakeLists.txt  tatum_fwd.hpp
libtatumparse/: CMakeLists.txt  main.cpp  tatumparse.hpp  tatumparse.l  tatumparse.y
libvtrutil/: CMakeLists.txt  Makefile
parmys/: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_plugin.common  Makefile_test.common  README.md  dt.py  dt_saved.joblib  environment.yml  verify_parmys.sh
src/: CMakeLists.txt  application.cpp  argparse.cpp  argparse.hpp  argparse.tpp  argparse_default_converter.hpp  argparse_error.hpp  argparse_formatter.cpp  argparse_util.cpp  argparse_util.hpp  argparse_util.tpp  argparse_value.hpp  blif_common.cpp  blif_common.hpp  blif_error.cpp  blif_error.hpp  blif_lexer.cpp  blif_lexer.hpp  blif_lexer.l  blif_parser.hpp  blif_parser.y  blif_pretty_print.cpp  blif_pretty_print.hpp  blifparse.cpp  blifparse.hpp  callback.cpp  camera.cpp  canvas.cpp  demo.c  graphics.cpp  main.cpp  sdc.cpp  sdc.hpp  sdc_common.cpp  sdc_common.hpp  sdc_error.cpp  sdc_lexer.cpp  sdc_lexer.l  sdc_lexer_fwd.hpp  sdc_parser.y  (+1 more)
tatum_sta/: CMakeLists.txt  echo_load.cpp  echo_load.hpp  echo_loader.cpp  echo_loader.hpp  golden_reference.hpp  main.cpp  output.cpp  output.hpp  profile.cpp  util.cpp  util.hpp  verify.cpp  verify.hpp  verify2.cpp  verify2.hpp
vpr/: #main.ui#  #notebookMenu copy.ui#  .cproject  4lut_sanitized.arch  4x4lut_sanitized.arch  CMakeLists.txt  Main.vcproj  Makefile  README  Readme.txt  VPR.sln  VPR.vcxproj  VPR.vcxproj.filters  VPR_User_Manual.doc  arch.echo  asan.supp  check_netlist.c  check_netlist.h  check_route.c  check_route.h  check_rr_graph.c  check_rr_graph.h  coverage_analyze.sh  coverage_reset.sh  descript.txt  draw.c  draw.h  e64-4x4lut.net  e64.net  e64.p  ext.h  globals.h  go.sh  graphics.c  graphics.h  hash.c  hash.h  heapsort.c  heapsort.h  install_packages.sh  (+90 more)
yosys/: .gitcommit  .gitmodules  CMakeLists.txt  Makefile
(+21073 files in other folders)
